--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ sourceSets {
 dependencies {
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
+    implementation files('dependencies/jbox2d-library.jar')
+
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-glfw"
     implementation "org.lwjgl:lwjgl-opengl"
